...
        ),
        Doctor(
            specialization = "Alergologie",
            image = "doctor_allergy"
        ),
        Doctor(
            specialization = "Kardiologie",
            image = "doctor_cardio"
        ),
        Doctor(
            specialization = "Chirurgie",
            image = "doctor_chirurgie"
        ),
...
